# sentiment-analysis-api

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_api.sh
src/: __init__.py  api.py  config.py  data_loader.py  dataset.py  logger.py  model.py  predict.py  profiler.py  schemas.py  tokenize_dataset.py  train.py
tests/: test_api.py
